martian-derive/tests/ui_martian_filetype/tests_empty_extension.stderr
error: The extension for a filetype cannot be empty. Consider using a PathBuf for filenames without any extension.
 --> $DIR/tests_empty_extension.rs:3:20
  |
3 | martian_filetype! {TxtFile, ""}
  |                    ^^^^^^^^^^^
