martian-derive/tests/ui_martian_filetype/tests_empty_extension.rs
use martian_derive::martian_filetype;

martian_filetype! {TxtFile, ""}

fn main() {}